README updates and python lib version changes
- updated Host configuration instructions as required by IPMI SOL test.
- warnings and errors were seen with higher versions
  of jsonschema library, replacing with a tested version.

Signed-off-by: Amrathesh <amrathesh@arm.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 robotframework
-requests
+requests==2.31.0
 robotframework-requests
 robotframework-jsonlibrary
 paramiko>=2.5.0
@@ -20,3 +20,4 @@ colorama
 pyasn1
 pyasn1_modules
 robotframework-lint
+jsonschema==3.2.0
