Fixed log path for SOL output directory
 - using ${OUTPUT DIR} automatic variable to get
   absolute path to log dir passed via --outputdir
   in config file.

Fixes: #20

Signed-off-by: Amrathesh <amrathesh@arm.com>

--- a/config
+++ b/config
@@ -7,8 +7,8 @@
 -v SYSTEM_ID:system
 -v CHASSIS_ID:chassis
 
+# relative or absolute path of logs directory
 --outputdir=logs
-
 
 ##### SOL Information #####
 # Default SOL_TYPE as ipmi sol.
