Updating deprecated API's for latest python version
Signed-off-by: Manjunatha D <mand02@a081966.arm.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ click
 PyYAML>=5.1
 redfishtool
 robotframework-selenium2library
-webdrivermanager
+webdriver-manager
 robotframework-angularjs
 robotframework-xvfb
 redfish_utilities
